# shop-cms-cis-534-project

./: README.md
shop-cms-backend/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
shop-cms-backend/app/: api.py  util.py
shop-cms-backend/app/controllers/: feedback.py  menu.py  restaurant.py
shop-cms-backend/app/models/: addon.py  addons.py  categories.py  category.py  feedback.py  hour.py  hours.py  menu.py  product.py  products.py  restaurant.py
shop-cms-backend/app/search/: client.py  queries.py
shop-cms-backend/scripts/: index_sample_data.py  setup_es_cluster.py
shop-cms-backend/scripts/es_index_settings_and_mappings/: feedback_mapping.json  feedback_settings.json  menu_mapping.json  menu_settings.json  restaurant_mapping.json  restaurant_settings.json
shop-cms-backend/scripts/sample_data/: feedback.txt  menu.txt  restaurant.txt
shop-cms-frontend/: package-lock.json  package.json
shop-cms-frontend/app/: globals.css  layout.js  page.js
shop-cms-frontend/components/: admin_create_new_restaurant_button.js  admin_home_nav_bar.js  admin_menu_table.js  admin_restaurant_table.js  back_button.js  consumer_home_nav_bar.js  consumer_menu.js  consumer_restaurant_description.js  consumer_restaurant_featured_feedback.js  consumer_restaurant_feedback_entry.js  consumer_restaurant_hours_list.js  consumer_restaurant_location.js  consumer_restaurant_menus_list.js  consumer_restaurant_name.js  consumer_restaurant_social_links.js  consumer_restaurant_table.js  footer.js  restaurant_menu_product_search_bar.js  restaurant_menu_product_search_results_list.js  (+2 more)
(+21 files in other folders)
